# truffle

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix  project  rokit.toml  update-fork.sh  zune.toml
.github/workflows/: ci.yml
crates/asphalt/: .gitignore  README.md
crates/asphalt/src/: cli.rs  config.rs  lib.rs  lockfile.rs  main.rs
crates/asphalt/src/sync/: mod.rs
crates/asphalt/tests/: sync.rs
crates/asphalt/tests/common/: mod.rs
crates/truffle/: Cargo.toml  build.rs
crates/truffle-config/: Cargo.toml
crates/truffle-config/src/: lib.rs
crates/truffle/src/: main.rs
crates/truffle/src/assets/: atlas.rs  augment.rs  loader.rs  mod.rs  model.rs  serialize.rs
crates/truffle/src/commands/: font.rs  highlight.rs  image.rs  mod.rs  palette.rs  sync.rs  terrain.rs
crates/truffle/src/image/: mod.rs  palette.rs  terrain.rs
scripts/: fetch_imagemagick.ps1  fetch_imagemagick.sh  package_release.sh
src/: highlight.rs  main.luau  main.rs
src/assets/: augment.rs  loader.rs  model.rs  serialize.rs
src/commands/: convert.luau  highlight.rs  highlights.luau  highlights.rs  mod.rs  sync.luau  sync.rs
src/lib/: base64.luau
tests/: convert.test.luau  highlights.test.luau  run-all.test.luau  sync.test.luau
