[package]
name = "truffle"
version.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "color", "help"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
walkdir = "2.4"
png = "0.17"
regex = "1.10"
full_moon = "2.0.0"
image = { version = "0.25", default-features = false, features = ["png"] }
tokio = { version = "1.48", features = ["full"] }
indicatif = "0.18"
truffle-config = { path = "../truffle-config" }
asphalt = { path = "../asphalt" }
